--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.4.1
 Django==3.2.5
 django-autoslug==1.9.8
 django-ckeditor==6.1.0
+django-cleanup==5.2.0
 django-js-asset==1.2.2
+install==1.3.4
 Pillow==8.3.1
 python-decouple==3.4
 pytz==2021.1
